@@ -21,7 +21,10 @@ my $_orig_warn_handler = $SIG{__WARN__};
 $SIG{__WARN__} = sub {
     context_do {
         my $ctx = shift;
-        $ctx->send_event( 'Warning', warning => $_[0] );
+        $ctx->send_event(
+            'Warning',
+            warning => 'Unexpected warning: ' . $_[0]
+        );
     }
     $_[0];
 
